--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
         <div class="page" id="page">
             <h2>Razón <span id="count">1</span></h2>
             <p id="reason">Porque eres la persona más especial en mi vida.</p>
-            <img id="image" src="images/1.jpg" alt="Imagen relacionada" class="media">
+            <img id="image" src="images/1.jpg" alt="" class="media">
             <video id="video" controls class="media">
                 <source src="videos/1.mp4" type="video/mp4">
                 Tu navegador no soporta el video.
             </video>
         </div>
+        <audio id="background-audio" loop>
+            <source src="audio/aud1.mp3" type="audio/mp3">
+            Tu navegador no soporta la etiqueta de audio.
+        </audio>
         <button id="prev-btn">Regresar</button>
         <button id="next-btn">Siguiente</button>
     </div>
