--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     padding: 20px;
   ">
     <h1 style="font-size: 2.5rem; margin-bottom: 30px;">
-      100 razones por las que te amo, Diananita 💖
+      100 razones por las que te amo, mi pequeña niña Di 💖
     </h1>
     <button id="btn-iniciar" style="
       padding: 20px 40px;
